tests/extensions/enotify/errors/url-mailto.sieve
require "enotify";

# 1: Invalid header name 
notify "mailto:stephan@rename-it.nl?header:=frop";

